--- a/KrausxRGA/UI/wndSrNumberInfo.xaml
+++ b/KrausxRGA/UI/wndSrNumberInfo.xaml
@@ -392,39 +392,6 @@
                                                    Width="524" Name="imgZoom" Visibility="Visible" 
                                                    MouseLeftButtonDown="imgZoom_MouseLeftButtonDown"/>
                                         </Border>
-                                        <Canvas x:Name="cvItemStatus" Visibility="Visible" Height="320" Canvas.Left="937" Canvas.Top="145" Width="427" OpacityMask="#FF535252" Background="#CC406B83">
-                                            <Canvas.Style>
-                                                <Style TargetType="Canvas">
-                                                    <Style.Triggers>
-                                                        <Trigger Property="IsVisible" Value="true">
-                                                            <Trigger.EnterActions >
-                                                                <BeginStoryboard >
-                                                                    <Storyboard >
-                                                                        <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" 
-                                                                                         From="1500" 
-                                                                                         To="950" 
-                                                                                         Duration="0:0:0.1"/>
-                                                                    </Storyboard>
-                                                                </BeginStoryboard>
-                                                            </Trigger.EnterActions>
-                                                        </Trigger>
-                                                    </Style.Triggers>
-                                                </Style>
-                                            </Canvas.Style>
-                                            <TextBlock Name="tbTitle" Text="Select Item Status Point." Foreground="#FFF9F9F9" Canvas.Left="44" Canvas.Top="2"/>
-
-                                            <Button Content="Close" Style="{StaticResource ResourceKey={x:Static ToolBar.ButtonStyleKey}}" Canvas.Left="-205" Width="322" Click="Button_Click" Height="89" RenderTransformOrigin="0.5,0.5" Canvas.Top="116" Background="#FFE07D1A" >
-                                                <Button.RenderTransform>
-                                                    <TransformGroup>
-                                                        <ScaleTransform/>
-                                                        <SkewTransform/>
-                                                        <RotateTransform Angle="90"/>
-                                                        <TranslateTransform/>
-                                                    </TransformGroup>
-                                                </Button.RenderTransform>
-                                            </Button>
-
-                                        </Canvas>
                                     </Canvas>
                                 </Border>
                             </TabItem>
@@ -437,6 +404,8 @@
                                             </Border>
                                             <CheckBox Name="cbrDamaged" Style="{StaticResource cbStyleKey}" Content="Item Damaged." Canvas.Left="41" Canvas.Top="72" />
 
+                                            <CheckBox Name="cbrWrong" Style="{StaticResource cbStyleKey}" Content="Received wrong item." Canvas.Left="41" Canvas.Top="153" />
+
                                             <CheckBox Name="cbrDuplicate" Style="{StaticResource cbStyleKey}" Content="Duplicate Shipment." Canvas.Left="42" Canvas.Top="237" />
 
                                             <CheckBox Name="cbrIncorrectOrder" Style="{StaticResource cbStyleKey}" Content="Incorrect item ordered." Canvas.Left="450" Canvas.Top="74" />
@@ -444,17 +413,6 @@
                                             <CheckBox Name="cbrDisplayedDiff" Style="{StaticResource cbStyleKey}" Content="Item is different from displayed on web." Canvas.Left="451" Canvas.Top="154" />
 
                                             <CheckBox Name="cbrSatisfied" Style="{StaticResource cbStyleKey}" Content="Not satisfied with item." Canvas.Left="450" Canvas.Top="237" />
-                                            <Border BorderBrush="Black" BorderThickness="1,1,3,3" Height="46" Canvas.Left="36" Canvas.Top="138" Width="392" CornerRadius="3">
-                                                <Border.Background>
-                                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                                                        <GradientStop Color="White" Offset="0"/>
-                                                        <GradientStop Color="#FFBBBBBB" Offset="1"/>
-                                                        <GradientStop Color="#FF959595" Offset="0.479"/>
-                                                        <GradientStop Color="#FFF9F7F7" Offset="0.409"/>
-                                                    </LinearGradientBrush>
-                                                </Border.Background>
-                                                <CheckBox x:Name="cbrWrong" Style="{StaticResource cbStyleKey}" Content="Received wrong item." Margin="0,0,260,28" BorderThickness="1,1,3,1" />
-                                            </Border>
                                         </Canvas>
                                     </Border>
                                     <Border Width="1360" CornerRadius="10" Canvas.Top="311" BorderBrush="#FF787878" Canvas.Left="20" BorderThickness="2,0,2,2" Height="229" >
@@ -462,7 +420,7 @@
                                             <Border Height="52" Width="1363" Background="#FF787878" Canvas.Top="1" Canvas.Left="-3">
                                                 <TextBlock TextWrapping="Wrap" Text="Other Reason" FontSize="30" Foreground="White" Margin="10,4,1153,6"/>
                                             </Border>
-                                            <TextBox Name="txtOtherReason" Height="49" Width="1356" Canvas.Top="53" TextWrapping="WrapWithOverflow" />
+                                            <TextBox Name="txtOtherReason" Height="174" Width="1356" Canvas.Top="53" TextWrapping="WrapWithOverflow" />
                                         </Canvas>
                                     </Border>
                                     <Border x:Name="bdrButtonSave" Height="62" Width="249" Canvas.Left="1114" Canvas.Top="549">
@@ -481,7 +439,7 @@
                             </TabItem>
                         </TabControl>
                     </Canvas>
-                    <Border BorderThickness="1" Height="73" Canvas.Top="704" Width="1105" Canvas.Left="5">
+                    <Border BorderThickness="1" Height="82" Canvas.Top="695" Width="1050" Canvas.Left="5">
                         <Canvas>
                             <Border Name="bdrMsg" Visibility="Hidden" BorderThickness="1" Height="27" Canvas.Left="0" Canvas.Top="53" Width="1048" Background="#E1007ACC">
                                 <Border.Style >
