--- a/KrausxRGA/UI/wndSrNumberInfo.xaml
+++ b/KrausxRGA/UI/wndSrNumberInfo.xaml
@@ -392,7 +392,7 @@
                                                    Width="524" Name="imgZoom" Visibility="Visible" 
                                                    MouseLeftButtonDown="imgZoom_MouseLeftButtonDown"/>
                                         </Border>
-                                        <Canvas x:Name="cvItemStatus" Visibility="Visible" Height="320" Canvas.Left="937" Canvas.Top="145" Width="427" OpacityMask="#FF535252" Background="#CC406B83">
+                                        <Canvas x:Name="cvItemStatus" Visibility="Hidden" Height="320" Canvas.Left="937" Canvas.Top="145" Width="427" OpacityMask="#FF535252" Background="#CC406B83">
                                             <Canvas.Style>
                                                 <Style TargetType="Canvas">
                                                     <Style.Triggers>
@@ -430,21 +430,15 @@
                             </TabItem>
                             <TabItem Header="Return Reason" Height="50" Width="250" FontSize="30" Foreground="#FF1BACFF" BorderBrush="#FF405EB8" BorderThickness="2" VerticalAlignment="Top" Margin="14,0,-14,0">
                                 <Canvas>
-                                    <Border Width="1360" CornerRadius="10" Canvas.Top="10" BorderBrush="#FF787878" Canvas.Left="20" BorderThickness="2,0,2,2" Height="296" >
+                                    <Border Width="1360" CornerRadius="10" Canvas.Top="10" BorderBrush="#FF787878" Canvas.Left="10" BorderThickness="2,0,2,2" Height="296" >
                                         <Canvas Name="cvCheckboxHolder" Margin="0,0,0,0">
                                             <Border Height="52" Width="1363" Background="#FF787878" Canvas.Top="1" Canvas.Left="-3">
                                                 <TextBlock TextWrapping="Wrap" Text="Reason(s) for Return" FontSize="30" Foreground="White" Margin="10,6,1062,0"/>
                                             </Border>
-                                            <CheckBox Name="cbrDamaged" Style="{StaticResource cbStyleKey}" Content="Item Damaged." Canvas.Left="41" Canvas.Top="72" />
 
-                                            <CheckBox Name="cbrDuplicate" Style="{StaticResource cbStyleKey}" Content="Duplicate Shipment." Canvas.Left="42" Canvas.Top="237" />
-
-                                            <CheckBox Name="cbrIncorrectOrder" Style="{StaticResource cbStyleKey}" Content="Incorrect item ordered." Canvas.Left="450" Canvas.Top="74" />
-
-                                            <CheckBox Name="cbrDisplayedDiff" Style="{StaticResource cbStyleKey}" Content="Item is different from displayed on web." Canvas.Left="451" Canvas.Top="154" />
-
-                                            <CheckBox Name="cbrSatisfied" Style="{StaticResource cbStyleKey}" Content="Not satisfied with item." Canvas.Left="450" Canvas.Top="237" />
-                                            <Border BorderBrush="Black" BorderThickness="1,1,3,3" Height="46" Canvas.Left="36" Canvas.Top="138" Width="392" CornerRadius="3">
+                                            <Border Name="bdrDamaged" Canvas.Left="36" Canvas.Top="79" Height="44" Width="392"
+                                                     BorderBrush="Black" BorderThickness="1,1,3,3" 
+                                                     CornerRadius="3">
                                                 <Border.Background>
                                                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                                         <GradientStop Color="White" Offset="0"/>
@@ -453,16 +447,89 @@
                                                         <GradientStop Color="#FFF9F7F7" Offset="0.409"/>
                                                     </LinearGradientBrush>
                                                 </Border.Background>
-                                                <CheckBox x:Name="cbrWrong" Style="{StaticResource cbStyleKey}" Content="Received wrong item." Margin="0,0,260,28" BorderThickness="1,1,3,1" />
+                                                <CheckBox Name="cbrDamaged" Style="{StaticResource cbStyleKey}" Content="Item Damaged." Canvas.Left="41" Canvas.Top="72" Margin="1,0,259,26" />
+                                            </Border>
+
+                                            <Border Name="bdrDuplicate" Canvas.Left="36" Canvas.Top="227" Height="43" Width="392"
+                                                     BorderBrush="Black" BorderThickness="1,1,3,3" 
+                                                     CornerRadius="3">
+                                                <Border.Background>
+                                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                                        <GradientStop Color="White" Offset="0"/>
+                                                        <GradientStop Color="#FFBBBBBB" Offset="1"/>
+                                                        <GradientStop Color="#FF959595" Offset="0.479"/>
+                                                        <GradientStop Color="#FFF9F7F7" Offset="0.409"/>
+                                                    </LinearGradientBrush>
+                                                </Border.Background>
+                                                <CheckBox Name="cbrDuplicate" Style="{StaticResource cbStyleKey}" Content="Duplicate Shipment." Canvas.Left="42" Canvas.Top="237" Margin="0,2,260,25" />
+                                            </Border>
+                                            <Border Name="bdrIcorrectOrder" Canvas.Left="453" Canvas.Top="79" Height="44" Width="579"
+                                                     BorderBrush="Black" BorderThickness="1,1,3,3" 
+                                                     CornerRadius="3">
+                                                <Border.Background>
+                                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                                        <GradientStop Color="White" Offset="0"/>
+                                                        <GradientStop Color="#FFBBBBBB" Offset="1"/>
+                                                        <GradientStop Color="#FF959595" Offset="0.479"/>
+                                                        <GradientStop Color="#FFF9F7F7" Offset="0.409"/>
+                                                    </LinearGradientBrush>
+                                                </Border.Background>
+                                                <CheckBox Name="cbrIncorrectOrder" Style="{StaticResource cbStyleKey}" Content="Incorrect item ordered." Canvas.Left="450" Canvas.Top="74" Margin="2,2,384,25" />
+                                            </Border>
+
+                                            <Border Name="bdrDisplayedDiff" Canvas.Left="453" Canvas.Top="155" Height="44" Width="579"
+                                                    BorderBrush="Black" BorderThickness="1,1,3,3" 
+                                                     CornerRadius="3">
+                                                <Border.Background>
+                                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                                        <GradientStop Color="White" Offset="0"/>
+                                                        <GradientStop Color="#FFBBBBBB" Offset="1"/>
+                                                        <GradientStop Color="#FF959595" Offset="0.479"/>
+                                                        <GradientStop Color="#FFF9F7F7" Offset="0.409"/>
+                                                    </LinearGradientBrush>
+                                                </Border.Background>
+                                                <CheckBox Name="cbrDisplayedDiff" Style="{StaticResource cbStyleKey}" Content="Item is different from displayed on web." Canvas.Left="451" Canvas.Top="154" Margin="2,1,384,26" />
+                                            </Border>
+
+                                            <Border Name="bdrSatisfied" Canvas.Left="453" Canvas.Top="230" Height="40" Width="579"
+                                                    BorderBrush="Black" BorderThickness="1,1,3,3" 
+                                                     CornerRadius="3">
+                                                <Border.Background>
+                                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                                        <GradientStop Color="White" Offset="0"/>
+                                                        <GradientStop Color="#FFBBBBBB" Offset="1"/>
+                                                        <GradientStop Color="#FF959595" Offset="0.479"/>
+                                                        <GradientStop Color="#FFF9F7F7" Offset="0.409"/>
+                                                    </LinearGradientBrush>
+                                                </Border.Background>
+                                                <CheckBox Name="cbrSatisfied" Style="{StaticResource cbStyleKey}" Content="Not satisfied with item." Canvas.Left="450" Canvas.Top="237" Margin="2,0,383,24" />
+                                            </Border>
+                                            <Border Name="bdrRecivedWrong" Canvas.Left="36" Canvas.Top="153" Height="46" Width="392"
+                                                    BorderBrush="Black" BorderThickness="1,1,3,3" 
+                                                     CornerRadius="3">
+                                                <Border.Background>
+                                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                                        <GradientStop Color="White" Offset="0"/>
+                                                        <GradientStop Color="#FFBBBBBB" Offset="1"/>
+                                                        <GradientStop Color="#FF959595" Offset="0.479"/>
+                                                        <GradientStop Color="#FFF9F7F7" Offset="0.409"/>
+                                                    </LinearGradientBrush>
+                                                </Border.Background>
+                                                <CheckBox x:Name="cbrWrong" Style="{StaticResource cbStyleKey}"
+                                                          Content="Received wrong item." Margin="0,1,260,27" 
+                                                          Checked="cbrWrong_Checked" 
+                                                          Unchecked="cbrWrong_Unchecked"/>
                                             </Border>
                                         </Canvas>
                                     </Border>
+
                                     <Border Width="1360" CornerRadius="10" Canvas.Top="311" BorderBrush="#FF787878" Canvas.Left="20" BorderThickness="2,0,2,2" Height="229" >
                                         <Canvas Margin="0,0,0,0">
                                             <Border Height="52" Width="1363" Background="#FF787878" Canvas.Top="1" Canvas.Left="-3">
                                                 <TextBlock TextWrapping="Wrap" Text="Other Reason" FontSize="30" Foreground="White" Margin="10,4,1153,6"/>
                                             </Border>
                                             <TextBox Name="txtOtherReason" Height="49" Width="1356" Canvas.Top="53" TextWrapping="WrapWithOverflow" />
+                                            <ComboBox Name="cmbOtherReason" Canvas.Left="2" Canvas.Top="102" Width="1354" Height="55"/>
                                         </Canvas>
                                     </Border>
                                     <Border x:Name="bdrButtonSave" Height="62" Width="249" Canvas.Left="1114" Canvas.Top="549">
